# axiom-core

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api-reference.md  index.md  models.md  rag-engine.md  vectorstore.md
docs/api/: endpoints.md  overview.md
docs/architecture/: data-flow.md  overview.md
docs/getting-started/: installation.md  quick-start.md
docs/models/: cost-tracking.md  overview.md  providers.md
docs/rag/: chunking.md  embeddings.md  overview.md  pipeline.md  retrieval.md
src/axiom/: __init__.py
src/axiom/api/: __init__.py  config.py  health.py  main.py  query.py
src/axiom/config/: __init__.py  settings.py
src/axiom/mcp/: __init__.py
src/axiom/models/: __init__.py
src/axiom/rag/: __init__.py
src/axiom/rag/rerankers/: __init__.py
src/axiom/rag/retrievers/: __init__.py
src/axiom/vectorstore/: __init__.py
tests/unit/: test_health.py
