[project]
name = "axiom-core"
version = "0.1.0"
description = "MCP-enabled personal knowledge assistant - Core API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # LLM orchestration
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",

    # Vector store
    "chromadb>=0.5.0",

    # MCP protocol
    "mcp>=1.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

experiments = [
    "jupyter>=1.1.0",
    "jupyterlab>=4.3.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "rich>=13.9.0",
    "ipython>=8.29.0",
]

reranking = [
    "cohere>=5.11.0",
    "sentence-transformers>=3.3.0",
]

local-models = [
    "ollama>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
